ij-jj-hospital-warehouse/warehouse-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ij-jj-hospital-warehouse-webapi
spec:
  replicas: 2
  selector:
      matchLabels:
        pod: ij-jj-hospital-warehouse-webapi-label
  template:
      metadata:
        labels:
          pod: ij-jj-hospital-warehouse-webapi-label
      spec:
        containers:
        - name: ij-jj-hospital-warehouse-webapi-container
          image: ivanjatz/hospital-warehouse-webapi:1.0.0-53
          imagePullPolicy: Always
          ports:
          - name: webapi-port
            containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
