ij-jj-hospital-warehouse/warehouse-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ij-jj-hospital-warehouse-webapi
spec:
  type: ClusterIP
  selector:
    pod: ij-jj-hospital-warehouse-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
